--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -2,8 +2,9 @@ name: Build and Deploy to AWS EC2
 
 on:
   push:
-    branches:
-      - develop
+   branches: [ main ]
+  pull_request:
+   branches: [ main ]
 
 jobs:
   build-and-deploy:
@@ -16,13 +17,18 @@ jobs:
     - name: Set up JDK 11
       uses: actions/setup-java@v3.3.0
       with:
-        java-version: 17
+        java-version: 11
         distribution: 'temurin'
 
     - name: Build with Gradle
       run: |
           mkdir -p ./build/generated-snippets
           ./gradlew build
+    
+    - name: NPM Build
+      run: |
+         npm install
+         npm run build
 
     - name: Login to DockerHub
       uses: docker/login-action@v1
@@ -50,3 +56,13 @@ jobs:
           docker rm my-app || true
           docker run -d --name my-app -p 80:8080 ${{ secrets.DOCKER_HUB_USERNAME }}/my-app:latest
         EOF
+        
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: your-aws-region
+          
+    - name: Upload to S3
+      run: aws s3 sync ./build s3://your-s3-bucket-name/
