--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -23,6 +23,7 @@ jobs:
     - name: Build with Gradle
       run: |
           cd server
+          chmod +x gradlew
           mkdir -p ./build/generated-snippets
           ./gradlew build
     
