--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -39,8 +39,10 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
+        file: ./Dockerfile
         push: true
         tags: ${{ secrets.DOCKER_HUB_USERNAME }}/my-app:latest
+        # ${{ secrets.DOCKER_HUB_USERNAME }}/my-app:latest
 
     - name: Setup SSH
       uses: webfactory/ssh-agent@v0.5.3
