--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -39,7 +39,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: ./Dockerfile
+        file: server/Dockerfile
         push: true
         tags: ${{ secrets.DOCKER_HUB_USERNAME }}/my-app:latest
         # ${{ secrets.DOCKER_HUB_USERNAME }}/my-app:latest
