--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -72,8 +72,12 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: npm ci
-      - run: npm run build --if-present
+      - name: Install Dependencies
+        run: npm ci
+        working-directory: ./client
+      - name: Build Project
+        run: npm run build --if-present
+        working-directory: ./client
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
