--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -73,11 +73,11 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - name: Install Dependencies
-        run: npm ci
-        working-directory: ./client
+        run: |
+          cd client
+          npm ci
       - name: Build Project
         run: npm run build --if-present
-        working-directory: ./client
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
@@ -89,7 +89,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: server/Dockerfile
+          file: client/Dockerfile_client
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/my-client-app:latest
           # ${{ secrets.DOCKER_HUB_USERNAME }}/my-app:latest
