--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -72,10 +72,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
+          cache-dependency-path: client/package-lock.json
       - name: Install Dependencies
-        run: |
-          cd client
-          npm ci
+        run: npm install
+
       - name: Build Project
         run: npm run build --if-present
 
