--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -75,9 +75,11 @@ jobs:
           cache-dependency-path: client/package-lock.json
       - name: Install Dependencies
         run: npm install
+        working-directory: ./client
 
       - name: Build Project
         run: npm run build --if-present
+        working-directory: ./client
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
