--- a/server/Dockerfile_client
+++ b/server/Dockerfile_client
@@ -1,7 +1,8 @@
 FROM node:18
 # 경로 설정하기
 WORKDIR /app
-
+COPY ../client/package.json package.json
+COPY ../client/package-lock.json package-lock.json
 COPY . .
 
 CMD ["npm", "start"]
