--- a/server/Dockerfile_client
+++ b/server/Dockerfile_client
@@ -4,5 +4,5 @@ WORKDIR /app
 COPY ../client/package.json package.json
 COPY ../client/package-lock.json package-lock.json
 COPY . .
-
-CMD ["npm", "start"]
+RUN npm install
+CMD ["npm" ,"install","start"]
