--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -113,7 +113,27 @@ jobs:
           EOF
           ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} 'docker system prune -a'
 
-
+#  deploy:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Checkout repository
+#        uses: actions/checkout@v2
+#
+#      - name: Delete Previous Directories on EC2
+#        run: |
+#          ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} 'rm -rf /path/to/client || true'
+#          ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} 'rm -rf /path/to/images || true'
+#
+#      - name: Deploy Client and Images to EC2
+#        uses: appleboy/scp-action@v0.3.0
+#        with:
+#          local: |
+#            client/
+#            img/
+#          host: ${{ secrets.SSH_HOST }}  # AWS EC2 인스턴스의 호스트 주소
+#          username: ${{ secrets.SSH_USERNAME }}  # AWS EC2 인스턴스의 사용자 이름
+#          key: ${{ secrets.SSH_PRIVATE_KEY }}  # SSH 개인 키 (시크릿으로 등록)
 
 
 
