--- a/server/Dockerfile_client
+++ b/server/Dockerfile_client
@@ -13,10 +13,10 @@ COPY client/package.json client/package-lock.json ./
 RUN npm install --silent --production
 
 # 나머지 소스 코드들을 복사합니다.
-COPY . .
+COPY client/ .
 
 # 애플리케이션을 빌드합니다.
-#RUN npm run build
+RUN npm run build
 
 # 애플리케이션 실행을 위한 명령어를 설정합니다.
 CMD ["npm", "start"]
